2009-04-14  Adam Roben  <aroben@apple.com>

        Remove support for profile-guided optimization on Windows

        Rubber-stamped by Steve Falkenburg.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Removed
        the Release_PGO configuration. Also let VS re-order the source files
        list.

2009-04-14  Xan Lopez  <xlopez@igalia.com>

        Unreviewed build fix.

        * GNUmakefile.am:

2009-04-14  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Gtk build fix when building minidom. Not reviewed.

        Use C-style comment instead of C++ style since autotools builds
        minidom using gcc and not g++.

        * wtf/Platform.h:

2009-04-14  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY - speculative build fix.

        * runtime/RegExp.h:

2009-04-13  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Cap'n Geoff Garen.

        Yarr!
        (Yet another regex runtime).

        Currently disabled by default since the interpreter, whilst awesomely
        functional, has not been optimized and is likely slower than PCRE, and
        the JIT, whilst faster than WREC, is presently incomplete and does not
        fallback to using an interpreter for the cases it cannot handle.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * assembler/MacroAssemblerX86Common.h:
        (JSC::MacroAssemblerX86Common::move):
        (JSC::MacroAssemblerX86Common::swap):
        (JSC::MacroAssemblerX86Common::signExtend32ToPtr):
        (JSC::MacroAssemblerX86Common::zeroExtend32ToPtr):
        (JSC::MacroAssemblerX86Common::branch32):
        (JSC::MacroAssemblerX86Common::branch16):
        * assembler/X86Assembler.h:
        (JSC::X86Assembler::cmpw_im):
        (JSC::X86Assembler::testw_rr):
        (JSC::X86Assembler::X86InstructionFormatter::immediate16):
        * runtime/RegExp.cpp:
        (JSC::RegExp::RegExp):
        (JSC::RegExp::~RegExp):
        (JSC::RegExp::create):